# napari-math

./: README.md  demo.py  setup.cfg  tox.ini
.napari/: DESCRIPTION.md
src/napari_math/: __init__.py  _widget.py  napari.yaml
src/napari_math/_tests/: test_widget.py
