[metadata]
name = napari-math
project_urls =
    Bug Tracker = https://github.com/zacsimile/napari-math/issues
    Documentation = https://github.com/zacsimile/napari-math#README.md
    Source Code = https://github.com/zacsimile/napari-math
    User Support = https://github.com/zacsimile/napari-math/issues
url = https://github.com/zacsimile/napari-math
version = 0.0.1a
author = Zach Marin, Talley Lambert
author_email = zach.marin@yale.edu

license = MIT
description = Simple mathematical operations on image, point and surface layers.
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-math = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-math = napari_math:napari.yaml
